# OnlineShop

./: LICENSE  README.md
shop_backend/: .env  .gitignore  docker-compose.yaml  pyproject.toml
shop_backend/src/: main.py  settings.py
shop_backend/src/alembic/: env.py
shop_backend/src/api/: api.py  deps.py
shop_backend/src/api/endpoints/: categories_end.py  deals_end.py  goods_end.py  images_end.py  user.py
shop_backend/src/auth/: auth.py  manager.py
shop_backend/src/base/: base.py  base_repository.py  deps.py  redis.py
shop_backend/src/exceptions/: base.py
shop_backend/src/models/: __init__.py  categories.py  deals.py  goods.py  images.py  user.py
shop_backend/src/repositories/: categories_repo.py  deals_repo.py  goods_repo.py  images_repo.py  users_repo.py
shop_backend/src/schemas/: categories.py  deals.py  goods.py  images.py  user.py
shop_backend/src/services/: categories_serv.py  deals_serv.py  goods_serv.py  images_serv.py  users_serv.py
shop_frontend/: .gitignore  package-lock.json  package.json
shop_frontend/src/: App.js  index.js
shop_frontend/src/Components/AddCategoryForm/: AddFormC.jsx
shop_frontend/src/Components/AddDealForm/: AddFormD.jsx
shop_frontend/src/Components/AddGoodForm/: AddFormG.jsx
shop_frontend/src/Components/AddUserForm/: AddFormU.jsx
shop_frontend/src/Components/AdminPanel/: AdminPanel.jsx
shop_frontend/src/Components/Cart/: Cart.jsx
shop_frontend/src/Components/ChangeCategoryForm/: ChangeFormC.jsx
shop_frontend/src/Components/ChangeGoodForm/: ChangeFormG.jsx
(+6 files in other folders)
