[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gosteva Daria <flear.feler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
fastapi-pagination = "^0.12.34"
redis = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
